RESOLVED FIXED136143
Web Inspector: RetainPtr misuse, CFRunLoopSource leak
https://bugs.webkit.org/show_bug.cgi?id=136143
Summary Web Inspector: RetainPtr misuse, CFRunLoopSource leak
Joseph Pecoraro
Reported 2014-08-21 19:02:34 PDT
RetainPtr<T>::operator= does a +1. It looks like here there should be an adopt where there isn't: > Source/JavaScriptCore/inspector/remote/RemoteInspectorDebuggableConnection.mm:239:5: warning > m_runLoopSource = CFRunLoopSourceCreate(nullptr, 1, &runLoopSourceContext); > ^
Attachments
[PATCH] Proposed Fix (1.73 KB, patch)
2014-08-21 19:03 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-08-21 19:02:55 PDT
Joseph Pecoraro
Comment 2 2014-08-21 19:03:47 PDT
Created attachment 236955 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2014-08-21 20:22:38 PDT
Comment on attachment 236955 [details] [PATCH] Proposed Fix Clearing flags on attachment: 236955 Committed r172845: <http://trac.webkit.org/changeset/172845>
WebKit Commit Bot
Comment 4 2014-08-21 20:22:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.